--- a/css/style.css
+++ b/css/style.css
@@ -77,6 +77,7 @@
 /* ----------------------hero section------------------------ */
 header{
     background-image: linear-gradient(rgba(0, 0, 0, 0.834)),url(../images-6/hero-bg.jpg);
+    background-attachment: fixed;
     background-position: center;
     background-size: cover;
     margin-top: 55px;
